--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
 }
 @font-face {
   font-family: "kumbhsans";
-  src: url("./KumbhSans-Light.ttf");
+  src: url("./KumbhSans-Regular.ttf");
+  font-weight: 400;
 }
 @font-face {
   font-family: "Kumbhsans-Bold";
@@ -32,27 +33,93 @@ body {
   background-color: white;
   position: relative;
   border-radius: 1rem;
-  width: 65%;
+  flex-basis: 65%;
   height: 30rem;
   display: flex;
-  flex-flow: row nowrap;
-  /* overflow: hidden; */
-  z-index: 1;
+  flex-flow: column nowrap;
 }
+
+.image_container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -50%;
+  background-image: url("../images/bg-pattern-mobile.svg"),
+    url("../images/illustration-woman-online-mobile.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: center 63%, 30% 46%;
+}
+summary {
+  list-style-type: none;
+  cursor: pointer;
+}
+.faq_container {
+  display: flex;
+  z-index: 5;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column wrap;
+  margin-top: auto;
+  flex-basis: 90%;
+}
+.faq {
+  margin: 1rem;
+  font-family: "Kumbhsans-Bold";
+  font-weight: 700;
+}
+.questions {
+  position: relative;
+  width: 90%;
+  border-bottom: 1px solid var(--divider);
+  padding: 0.8rem 0;
+}
+.question::after {
+  content: "\2304";
+  position: absolute;
+  transform: translatey(-60%);
+  right: 1%;
+  font-size: 1.3rem;
+  color: var(--caret-color);
+}
+details[open] > .question {
+  font-weight: 400;
+  font-family: "Kumbhsans-Bold";
+}
+details[open] > .question::after {
+  content: "\2303";
+  position: absolute;
+  right: 1%;
+  transform: translatey(5%);
+  font-size: 1.3rem;
+  color: var(--caret-color);
+}
+.answer {
+  margin-top: 0.75rem;
+  color: var(--text-color);
+  font-size: 0.75rem;
+}
+
+.attribution {
+  position: fixed;
+  bottom: 1%;
+}
+
+/* }
 .image_sidebar {
   background: url("../images/bg-pattern-desktop.svg") no-repeat,
     url("../images/illustration-woman-online-desktop.svg") no-repeat;
   background-size: contain, contain;
   background-position: right 70px bottom -170px, left -70px bottom 70px;
-  display: flex;
-  justify-content: center;
   min-width: 50%;
 }
 
 .box_img {
   z-index: 2;
   position: absolute;
+  object-fit: cover;
   left: -10%;
+  height: auto;
+  width: auto;
   bottom: 22%;
 }
 ul {
@@ -113,4 +180,4 @@ ul {
 .attribution {
   position: fixed;
   bottom: 1%;
-}
+} */
