--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --divider: hsl(240, 5%, 91%);
   --text-color: hsl(237, 12%, 33%);
   --caret-color: hsl(14, 88%, 65%);
+  --background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
 @font-face {
   font-family: "kumbhsans";
@@ -17,13 +18,16 @@
   padding: 0;
   margin: 0;
 }
+*:focus {
+  outline: 1px dashed var(--caret-color);
+}
 html {
   font-size: 16px;
   font-family: "Kumbhsans";
 }
 body {
   min-height: 100vh;
-  background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+  background-image: var(--background-image);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,11 +51,15 @@ body {
   background-image: url("../images/bg-pattern-mobile.svg"),
     url("../images/illustration-woman-online-mobile.svg");
   background-repeat: no-repeat, no-repeat;
-  background-position: center 63%, 30% 46%;
+  background-position: 50% 63%, 30% 46%;
 }
+details,
 summary {
-  list-style-type: none;
+  list-style: none;
   cursor: pointer;
+}
+summary::-webkit-details-marker {
+  display: none;
 }
 .faq_container {
   display: flex;
