--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ details[open] > .question::after {
     background-image: url("../images/bg-pattern-desktop.svg"),
       url("../images/illustration-woman-online-desktop.svg");
     background-repeat: no-repeat, no-repeat;
-    background-size: contain, contain;
+    background-size: auto;
     background-position: top -20rem left -35rem, left -5rem bottom 3rem;
   }
 
@@ -138,11 +138,12 @@ details[open] > .question::after {
     z-index: 3;
     position: absolute;
     left: -10%;
-    bottom: 30%;
+    bottom: 32%;
     height: 30%;
     width: 30%;
     background-image: url("../images/illustration-box-desktop.svg");
     background-repeat: no-repeat;
+    background-color: red;
   }
   .faq_container {
     flex-basis: 100%;
