--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,9 @@ body {
   background-color: white;
   position: relative;
   border-radius: 1rem;
-  height: 70vh;
+  min-height: 70vh;
   display: flex;
+  margin-bottom: 1.5rem;
 }
 
 details,
